# tigrinho-da-copa-telegram

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPLETION.md  PROGRESS.md  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh
docs/superpowers/plans/: 2026-06-15-pre-game-reminder.md  2026-06-16-live-group-notifications.md  2026-06-16-placar-jogos.md  2026-06-17-minhas-apostas-history.md  2026-06-18-bolaozinhos.md  2026-06-19-splitwise-bolaozinho.md  2026-06-20-daily-ai-bolaozinho.md  2026-06-20-orthogonal-bet-categories.md
docs/superpowers/specs/: 2026-06-15-pre-game-reminder-design.md  2026-06-16-live-group-notifications-design.md  2026-06-16-placar-jogos-design.md  2026-06-16-score-reconciliation-design.md  2026-06-17-minhas-apostas-history-design.md  2026-06-18-tournaments-design.md  2026-06-19-splitwise-bolaozinho-design.md  2026-06-20-daily-ai-bolaozinho-design.md  (+1 more)
tests/: conftest.py  test_ai_palpite.py  test_alerts.py  test_api_football.py  test_app.py  test_bets.py  test_bets_handlers.py  test_board_data.py  test_board_handlers.py  test_budget.py  test_callbacks.py  test_cli.py  test_config.py  test_daily_bolao_ai.py  test_daily_bolao_job.py  test_daily_bolao_pure.py  test_daily_bolao_repo.py  test_daily_bolao_service.py  test_fake_provider.py  test_gemini_generator.py  test_keyboards.py  test_live.py  test_logging.py  test_main.py  test_messaging.py  test_migrations.py  test_models.py  test_palpite_handlers.py  test_palpite_job.py  test_palpite_repo.py  test_palpite_service.py  test_poll_job.py  test_reconcile_job.py  test_reminder_job.py  test_repositories.py  test_scoreboard.py  test_scoring.py  test_settlement.py  test_settlement_service.py  test_smoke_e2e.py  (+13 more)
tigrinho/: __init__.py  __main__.py  board_data.py  cli.py  config.py  daily_bolao_service.py  enums.py  logging.py  palpite_service.py  scoreboard.py  settlement_service.py  splitwise_service.py  tournament_service.py
tigrinho/ai/: base.py  daily_bolao.py  gemini.py  prompt.py  schemas.py
tigrinho/bot/: __init__.py  alerts.py  app.py  bets_handlers.py  board_handlers.py  callbacks.py  daily_bolao_job.py  help_handlers.py  keyboards.py  messaging.py  palpite_handlers.py  palpite_job.py  poll_job.py  reconcile_job.py  reminder_job.py  runtime.py  splitwise_handlers.py  splitwise_register.py  sweep_job.py  sync_job.py  tournament_announce.py  tournament_handlers.py
tigrinho/db/: __init__.py  engine.py  models.py  repositories.py
tigrinho/domain/: __init__.py  bets.py  daily_bolao.py  live.py  scoring.py  settlement.py  splitwise_ledger.py  text_pt.py  tournament.py
tigrinho/providers/: __init__.py  api_football.py  base.py  budget.py  factory.py  fake.py  splitwise.py
(+15 files in other folders)
