[project]
name = "tigrinho"
version = "0.1.0"
description = "TigrinhoDaCopa — Telegram bot for friendly, no-money FIFA World Cup 2026 bets."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings[yaml]>=2.14",
    "structlog>=25.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-telegram-bot[job-queue]>=22",
    "typer>=0.12",
    "google-genai>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tigrinho"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ['(^|/)\.venv/', '(^|/)build/', '(^|/)dist/']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# The pure domain (scoring + settlement) MUST keep ~100% line+branch coverage (DoD, §0/§2);
# enforced on every `pytest` run so a regression fails the gate immediately.
addopts = "-q --cov=tigrinho.domain.scoring --cov=tigrinho.domain.settlement --cov=tigrinho.domain.tournament --cov-branch --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["tigrinho"]
branch = true

[tool.coverage.report]
show_missing = true
